<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView android:id="@+id/UserInfoPage"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/UserInfoPage"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              android:layout_marginTop="30dp"
              android:textSize="20sp"
    />

    <TextView android:id="@+id/UserNameTitle"
              android:layout_width="100dp"
              android:layout_height="50dp"
              android:text="@string/UserName"
              android:gravity="center"
              app:layout_constraintTop_toBottomOf="@id/UserInfoPage"
              app:layout_constraintLeft_toLeftOf="parent"
              android:layout_marginTop="50dp"
              android:layout_marginLeft="20dp"
    />

    <EditText android:layout_width="220dp"
              android:layout_height="40dp"
              app:layout_constraintTop_toTopOf="@id/UserNameTitle"
              app:layout_constraintRight_toRightOf="parent"
              android:layout_marginRight="10dp"
    />

    <TextView android:id="@+id/UserTelTitle"
              android:layout_width="100dp"
              android:layout_height="50dp"
              android:text="@string/UserTel"
              android:gravity="center"
              app:layout_constraintTop_toBottomOf="@id/UserNameTitle"
              app:layout_constraintLeft_toLeftOf="parent"
              android:layout_marginTop="10dp"
              android:layout_marginLeft="20dp"

    />

    <EditText android:layout_width="220dp"
              android:layout_height="40dp"
              app:layout_constraintTop_toTopOf="@id/UserTelTitle"
              app:layout_constraintRight_toRightOf="parent"
              android:layout_marginRight="10dp"
    />

    <TextView android:id="@+id/UserAddressTitle"
              android:layout_width="100dp"
              android:layout_height="50dp"
              android:text="@string/UserAddress"
              android:gravity="center"
              app:layout_constraintTop_toBottomOf="@id/UserTelTitle"
              app:layout_constraintLeft_toLeftOf="parent"
              android:layout_marginTop="10dp"
              android:layout_marginLeft="20dp"
    />

    <EditText android:id="@+id/UserAddressInput1"
              android:layout_width="220dp"
              android:layout_height="40dp"
              app:layout_constraintTop_toTopOf="@id/UserAddressTitle"
              app:layout_constraintRight_toRightOf="parent"
              android:layout_marginRight="10dp"
    />
    <EditText android:id="@+id/UserAddressInput2"
              android:layout_width="0dp"
              android:layout_height="40dp"
              app:layout_constraintTop_toBottomOf="@id/UserAddressInput1"
              app:layout_constraintRight_toRightOf="@id/UserAddressInput1"
              app:layout_constraintLeft_toLeftOf="@id/UserAddressTitle"
              android:layout_marginTop="5dp"
    />

    <TextView android:id="@+id/UserRemarkTitle"
              android:layout_width="100dp"
              android:layout_height="50dp"
              android:text="@string/Remarks"
              android:gravity="center"
              app:layout_constraintTop_toBottomOf="@id/UserAddressInput2"
              app:layout_constraintLeft_toLeftOf="parent"
              android:layout_marginTop="10dp"
              android:layout_marginLeft="20dp"
    />

    <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/RemarkSelect"
            android:layout_width="0dp"
            android:layout_height="40dp"
            app:layout_constraintRight_toRightOf="@id/UserAddressInput2"
            app:layout_constraintTop_toTopOf="@id/UserRemarkTitle"
            app:layout_constraintLeft_toLeftOf="@id/UserAddressInput1"
            android:gravity="center_horizontal"
            android:entries="@array/RemarkClass"
            android:layout_marginLeft="20dp"

    />

    <EditText
            android:id="@+id/add_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:minLines="8"
            android:maxLines="10"
            android:background="@android:drawable/edit_text"
            app:layout_constraintTop_toBottomOf="@id/UserRemarkTitle"
            app:layout_constraintLeft_toLeftOf="@id/UserRemarkTitle"
            app:layout_constraintRight_toRightOf="@id/RemarkSelect"
            android:layout_marginTop="15dp"
    >
        <!--android:scrollbars="vertical"   这句会打开输入法并使得组件上卷 -->
</EditText>

    <Button
        android:id="@+id/UserLoginButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text=" 确 认 "
        android:textSize="20dp"
        android:textColor="@color/whitesmoke"
        android:background="@drawable/shape_btn"
        android:layout_marginBottom="30dp"
        />





</android.support.constraint.ConstraintLayout>
